bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/not_directives_first.error_regex
The fields \['something_not_directives_first'\] were unknown to the schema
